# python-dice

./: .envrc  .gitignore  .travis.yml  LICENCE  LICENSE.md  Pipfile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yaml
dice/: __init__.py  __main__.py  command.py  constants.py  elements.py  exceptions.py  grammar.py  operators.py  utilities.py
dice/grammar/: number.py  test_number.py
dice/tests/: __init__.py  conftest.py  test_command.py  test_elements.py  test_grammar.py  test_main.py  test_utilities.py
dice/tests/grammar/: test_dice.py  test_integer.py  test_subexpr.py
