[metadata]
name = dice
version = 4.0.0
author = Sam Clements
author_email = sam@borntyping.co.uk
license = MIT
description = A library for parsing and evaluating dice notation
url = https://github.com/borntyping/python-dice
long_description = file: README.rst
classifiers =
    Development Status :: 6 - Mature
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Board Games
    Topic :: Games/Entertainment :: Role-Playing
    Topic :: Games/Entertainment :: Multi-User Dungeons (MUD)
    Topic :: Games/Entertainment :: Turn Based Strategy
    Topic :: Utilities

[options]
packages = find:
install_requires =
    docopt>=0.6.1
    pyparsing>=2.4.1

[options.entry_points]
console_scripts =
    dice = dice.command:main
    roll = dice.command:main

[bdist_wheel]
universal=1
